# python-that-runs-c-plus-plus

./: .gitignore  CMakeLists.txt  README.md  README.rst  run_api_demo.py
headers/: pyapi_wrapper.h
src/: lib_pyapi_wrapper_ext.cpp  pyapi_wrapper.cpp
